<resources>
    <string name="app_name">SA Weather+</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="settings">Settings</string>
    <string name="language_changed">Language changed. Restarting app...</string>
    <string name="notifications_updated">Notification preference updated</string>
    <string name="default_web_client_id">REPLACE_WITH_WEB_CLIENT_ID</string>
</resources>
